[gd_scene load_steps=11 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://img/Enemy/Enemy IDLE.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.0
height = 4.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 14.5, 5 )

[sub_resource type="Animation" id=2]
resource_name = "IDLE"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 3, 2, 1 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "IDLE"

[sub_resource type="AnimationNodeStateMachine" id=5]
states/IDLE/node = SubResource( 4 )
states/IDLE/position = Vector2( 651, 84 )
start_node = "IDLE"

[sub_resource type="AnimationNodeStateMachinePlayback" id=6]

[sub_resource type="CircleShape2D" id=7]
radius = 42.0

[node name="Enemy Testing" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 1 )

[node name="Pivot" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Pivot"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
hframes = 6

[node name="ScareSpawn" type="Position2D" parent="Pivot"]
position = Vector2( 6, -1 )
scale = Vector2( 0.25, 0.25 )

[node name="ScareArea" type="Area2D" parent="Pivot"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/ScareArea"]
position = Vector2( 18, 0 )
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/IDLE = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 5 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 6 )

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_HurtBox_area_exited"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_DetectionArea_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
